ubaceno jos dva teksta neke slike i zapocet deo gde se skrolovanjem menja boja navigacije

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Shadows+Into+Light|Shadows+Into+Light+Two" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Poiret+One|Shadows+Into+Light|Shadows+Into+Light+Two" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-
+    <!--Icon-->
+    <link rel="icon" href="images/image25.png">
 
   </head>
 
@@ -27,11 +28,11 @@
         <li class="menu"><a href=''>Project</a></li>
         <li class="menu"><a href=''>Contact</a></li>
       </ul>
-      <img src="images/image10.png" alt="logo"  class='logo'>
     </nav>
+    <img src="images/image10.png" alt="logo"  class='logo'>
     <div class="naslov">
-        <h1>I'm Goran</h1>
-        <p>and i'm full stuck developer</p>
+      <h1>I'm Goran</h1>
+      <p>and i'm full stuck developer</p>
     </div>
   </header>
      <article class="">
@@ -42,6 +43,23 @@
 
             The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English </p>
        </section>
+
+       <section>
+         <img src="images/image22.png" alt="What I have learned" id='learned'>
+         <p>Where does it come from?
+           Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+
+           The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+       </section>
+
+       <section>
+         <img src="images/image23.jpg" alt="What I'm learning" id="learning">
+         <p>Where does it come from?
+           Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+
+           The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+       </section>
+
      </article>
 
      <footer>
