--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
      </footer>
   </div>
   <!--Script-->
-  <script type="text/javascript" src="app.js">
-
-  </script>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 
 </html>
